[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://rsc/main/Main.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Increase" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.0
margin_top = -231.23
margin_right = 85.0
margin_bottom = -109.23
custom_fonts/font = SubResource( 1 )
text = "INCREASE SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 620.476
margin_top = 68.7701
margin_right = 1011.48
margin_bottom = 174.77
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="IncreaseHigh" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -475.164
margin_top = 49.7498
margin_right = 186.836
margin_bottom = 171.75
custom_fonts/font = SubResource( 1 )
text = "INCREASE HIGHSCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High" type="Label" parent="."]
margin_left = 620.476
margin_top = 364.77
margin_right = 1011.48
margin_bottom = 470.77
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 75.0
margin_top = 235.0
margin_right = 615.0
margin_bottom = 280.0
edit_alpha = false
[connection signal="pressed" from="Increase" to="." method="_on_Increase_pressed"]
[connection signal="pressed" from="IncreaseHigh" to="." method="_on_IncreaseHigh_pressed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
